# ray_tracer

./: .gitignore  CMakeLists.txt  README.md  README.txt
CMake/: CGL_Assimp.cmake  FindFreeImage.cmake  FindGLFW.cmake  Findassimp.cmake
res/PLY/: copy_room.ply
res/scenes/: default.cgl  example1.cgl  example2.cgl  pointlights_spheres.cgl  pointlights_spheres_meshes.cgl  sample_scene.cgl
shader/: Mesh_blinn.frag  Mesh_blinn.vert  Mesh_phong.frag  Mesh_phong.vert
src/: BaseTracer.cpp  BaseTracer.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Drawable.cpp  Drawable.h  DrawableCircularAreaLight.cpp  DrawableCircularAreaLight.h  DrawablePointLight.cpp  DrawablePointLight.h  DrawableRectangularAreaLight.cpp  DrawableRectangularAreaLight.h  DrawableShape.cpp  DrawableShape.h  FrameBuffer.cpp  FrameBuffer.h  GLApp.cpp  GLApp.h  GLEmbreeTracer.cpp  GLEmbreeTracer.h  GLExample.cpp  GLExample.h  GLIncludes.h  Gui.cpp  Gui.h  ImageSaver.cpp  ImageSaver.h  InputManager.cpp  InputManager.h  Light.h  Mesh.cpp  Mesh.h  RayCaster.cpp  RayCaster.h  RayTracer.cpp  RayTracer.h  Room.cpp  Room.h  (+22 more)
